media-services/tautulli/tautulli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
      - name: tautulli
        image: ghcr.io/home-operations/tautulli:2.15.2
        volumeMounts:
        - name: config
          mountPath: /config
        securityContext:
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 100
        runAsNonRoot: true
        runAsUser: 1026
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tautulli-config-pvc
