media-services/tautulli/tautulli-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
spec:
  selector:
    app: tautulli
  ports:
  - name: web-ui
    port: 8181
